--- a/FluentisCore/appsettings.Development.json
+++ b/FluentisCore/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost,1433;Database=FluentisDB;User ID=sa;Password=ApiTestKey123!;TrustServerCertificate=yes;"
     }
-  }
 }
