--- a/FluentisCore/appsettings.Development.json
+++ b/FluentisCore/appsettings.Development.json
@@ -8,5 +8,16 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost,1433;Database=FluentisDB;User ID=sa;Password=ApiTestKey123!;TrustServerCertificate=yes;"
+    },
+    "AzureAd": {
+        "Instance": "https://login.microsoftonline.com/",
+        "Domain": "asofarmabpm.onmicrosoft.com",
+        "TenantId": "846e3824-7539-4a0d-bfb6-00745fba3165",
+        "ClientId": "badd1a2d-8427-4f00-b56d-ddbbd9f1883e",
+        "Audience": "https://asofarmabpm.onmicrosoft.com/badd1a2d-8427-4f00-b56d-ddbbd9f1883e"
+    },
+    "Cors": {
+        "AllowedOrigins": [ "http://localhost:3000" ]
     }
+
 }
