--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - sqlserver
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=FluentisDB;User Id=sa;Password=ApiTestKey123!;TrustServerCertificate=True;
+      - ConnectionStrings__DefaultConnection=Server=tcp:fluentis.database.windows.net,1433;Initial Catalog=fluentis;Persist Security Info=False;User ID=sadmin;Password=ApiTestKey123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
     ports:
       - "8080:80"
 
