--- a/render.yaml
+++ b/render.yaml
@@ -5,24 +5,6 @@ envVarGroups:
         value: ApiTestKey123!
 
 services:
-  - type: pserv
-    name: sqlserver
-    runtime: image
-    image:
-      url: mcr.microsoft.com/mssql/server:2022-latest
-    plan: standard
-    envVars:
-      - key: ACCEPT_EULA
-        value: Y
-      - key: SA_PASSWORD
-        value: ApiTestKey123!
-      - key: MSSQL_PID
-        value: Express
-      - fromGroup: sqlserver-creds
-    disk:
-      name: sqlserver-data
-      mountPath: /var/opt/mssql
-      sizeGB: 10
   - type: web
     name: api
     runtime: docker
@@ -32,5 +14,5 @@ services:
     #   url: jcdiegolopez/fluentis-core-develop:latest
     envVars:
       - key: ConnectionStrings__DefaultConnection
-        value: Server=sqlserver,1433;Database=your_database_name;User ID=sa;Password=ApiTestKey123!;TrustServerCertificate=True;
+        value: Server=tcp:fluentis.database.windows.net,1433;Initial Catalog=fluentis;Persist Security Info=False;User ID=sadmin;Password=ApiTestKey123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
       - fromGroup: sqlserver-creds
