fix: Changed default connection string in development appsettings.json

--- a/FluentisCore/appsettings.Development.json
+++ b/FluentisCore/appsettings.Development.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,1433;Database=FluentisDB;User ID=sa;Password=ApiTestKey123!;TrustServerCertificate=yes;"
+        "DefaultConnection": "Server=tcp:fluentis.database.windows.net,1433;Initial Catalog=fluentis;Persist Security Info=False;User ID=sadmin;Password=ApiTestKey123!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
 }
