--- a/FluentisCore/appsettings.json
+++ b/FluentisCore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+        "DefaultConnection": "Server=tcp:fluentis.database.windows.net,1433;Initial Catalog=fluentis;Persist Security Info=False;User ID=sadmin;Password=ApiTestKey123!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    }
 }
