--- a/FluentisCore/appsettings.Development.json
+++ b/FluentisCore/appsettings.Development.json
@@ -14,8 +14,7 @@
         "Domain": "asofarmabpm.onmicrosoft.com",
         "TenantId": "846e3824-7539-4a0d-bfb6-00745fba3165",
         "ClientId": "badd1a2d-8427-4f00-b56d-ddbbd9f1883e",
-        "Audience": "https://asofarmabpm.onmicrosoft.com/badd1a2d-8427-4f00-b56d-ddbbd9f1883e",
-        "ClientSecre": "HmV8Q~FcOqPZuhLdbLun3lz3rdXUPL-0cnYODaEC"
+        "Audience": "https://asofarmabpm.onmicrosoft.com/badd1a2d-8427-4f00-b56d-ddbbd9f1883e"
     },
     "Cors": {
         "AllowedOrigins": [ "http://localhost:3000","http://localhost:5173" ]
