fix: removed stylecop analyzers, removed warnaserror option from ci cd workflow.

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore FluentisCore.sln
 
-      # 4. Construir y verificar linting (falla si hay advertencias o errores)
+      # 4. Construir y verificar linting (falla si hay advertencias o errores) -warnaserror
       - name: Build and check linting
-        run: dotnet build FluentisCore.sln --configuration Release --no-restore -warnaserror
+        run: dotnet build FluentisCore.sln --configuration Release --no-restore
 
       # 5. Ejecutar pruebas (si tienes un proyecto de pruebas)
       - name: Run tests
