fix: changed db to local and authorization for every crud operation

--- a/FluentisCore/appsettings.json
+++ b/FluentisCore/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-        "DefaultConnection": "Server=tcp:fluentis.database.windows.net,1433;Initial Catalog=fluentis;Persist Security Info=False;User ID=sadmin;Password=ApiTestKey123!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "DefaultConnection": "Server=localhost,1433;Database=pollocampero;User Id=sa;Password=ApiTestKey123!;TrustServerCertificate=True;"
     },
   "AzureAd": {
         "Instance": "https://login.microsoftonline.com/",
