--- a/render.yaml
+++ b/render.yaml
@@ -14,5 +14,5 @@ services:
     #   url: jcdiegolopez/fluentis-core-develop:latest
     envVars:
       - key: ConnectionStrings__DefaultConnection
-        value: Server=tcp:fluentis.database.windows.net,1433;Initial Catalog=fluentis;Persist Security Info=False;User ID=sadmin;Password=ApiTestKey123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
+        value: Server=sqlserver,1433;Database=pollocampero;User Id=sa;Password=ApiTestKey123!;TrustServerCertificate=True;
       - fromGroup: sqlserver-creds
