fix: added additional ports for azure auth

--- a/FluentisCore/appsettings.json
+++ b/FluentisCore/appsettings.json
@@ -18,6 +18,6 @@
         "ClientSecret": "HmV8Q~FcOqPZuhLdbLun3lz3rdXUPL-0cnYODaEC"
     },
     "Cors": {
-        "AllowedOrigins": "http://localhost:3000,http://localhost:5173"
+        "AllowedOrigins": "http://localhost:3000,http://localhost:5173,http://localhost:5175"
     }
 }
