--- a/FluentisCore/Properties/launchSettings.json
+++ b/FluentisCore/Properties/launchSettings.json
@@ -7,7 +7,8 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5155",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "FLUENTIS_TEST_TOKEN": ""
       }
     },
     "https": {
