--- a/FluentisCore/FluentisCore.csproj
+++ b/FluentisCore/FluentisCore.csproj
@@ -4,6 +4,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
      <UserSecretsId>Asp-ApiFluentis</UserSecretsId>
+  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.13.2" />
