--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,14 @@ jobs:
     - name: Run tests
       run: dotnet test FluentisCore.Tests/FluentisCore.Tests.csproj --no-build --verbosity normal --configuration Release --filter "FullyQualifiedName!~IntegrationTests"
     
+    - name: Clear NuGet cache (fix dotnet-ef installation)
+      run: dotnet nuget locals all --clear
+    
     - name: Install EF Core Tools
-      run: dotnet tool install --global dotnet-ef
+      run: dotnet tool install --global dotnet-ef --version 9.0.0
+    
+    - name: Restore local tools
+      run: dotnet tool restore
     
     - name: Check Migrations
       run: dotnet ef migrations list --project FluentisCore/FluentisCore.csproj --startup-project FluentisCore/FluentisCore.csproj
